fixed some spacing issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -105,7 +105,7 @@ main {
 }
 
 .option-container .option-container__list {
-  margin-bottom: 40px;
+  margin-bottom: 48px;
 }
 
 .option-container__item .reset-option {
@@ -120,7 +120,7 @@ main {
   align-self: flex-start;
 }
 
-.reset-option:first-child {
+.option-container__item:first-child .reset-option {
   margin-bottom: 24px;
 }
 
